--- a/_009_netflix-microservices/service-limits/src/main/resources/templates/index.html
+++ b/_009_netflix-microservices/service-limits/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Spring Cloud service-limits Client</title>
+<title>service-limits</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <link rel="stylesheet"
@@ -14,7 +14,7 @@
 	<div class="row">
 		<div class="col-md-2"></div>
 		<div class="col-md-8">
-			<h1>Spring Cloud service-a1 Client</h1>
+			<h1>Spring Cloud service-limits Client</h1>
 			<p th:text="'processstart: ' + ${processstart}" />
 			<p th:text="'processstop: ' + ${processstop}" />
 			<p th:text="'rate: ' + ${rate}" />
